service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-ws-svc
spec:
  selector:
    app: my-ws-app
  ports:
    - protocol: TCP
      port: 8008
      targetPort: web
      nodePort: 31610
  type: NodePort
