ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: arch.homework
    http:
      paths:
        - path: /($|)(.*)
          pathType: Prefix
          backend:
            serviceName: my-ws-svc
            servicePort: 8008
